# QuizGen

./: example.py  pyproject.toml
docs/: quick_start.md
modules/: quizgen.py
modules/tag/: __init__.py
modules/task/: __init__.py
modules/task/factory/: __init__.py  default.py  metadata.py
modules/utils/: option.py  types.py  utils.py
modules/variant/: __init__.py
modules/variant_builder/: __init__.py  context.py  default_task_selector.py  inverted_index_least_overlap_selector.py  task_pool.py  task_selector.py  variant_set.py  variant_task.py
modules/variant_builder/filters/: __init__.py  builder.py  types.py
modules/variant_builder/filters/dynamic/: __init__.py  composite.py
modules/variant_builder/filters/static/: __init__.py  composite.py  must_be_one_of.py  must_include_all_tags.py  must_include_any_tag.py
