[project]
name = "QuizGen"
version = "0.1.0"
description = ""
authors = [
    {name = "ton1c",email = "sembl1@ya.ru"}
]
readme = "README.md"
requires-python = ">=3.8,<4"
dependencies = [
    "option (>=2.1.0,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
